# libzks

./: .gitignore  CMakeLists.txt  README.md
builds/linux/: Makefile
builds/vs2013/libzks/: libzks.sln
builds/vs2013/libzks/libzks/: libzks.vcxproj  libzks.vcxproj.filters
builds/vs2013/libzks/unittest/: unittest.vcxproj  unittest.vcxproj.filters
builds/vs2015/libzks/: NoWarnings.props  libzks.sln
builds/vs2015/libzks/libzks/: libzks.vcxproj  libzks.vcxproj.filters
builds/vs2015/libzks/xunit/: xunit.vcxproj  xunit.vcxproj.filters
src/: BitVector.h  CMakeLists.txt  MurmurHash3.cpp  MurmurHash3.h  array.h  bit_hack.cpp  bit_hack.h  configure.h  distributor.cpp  distributor.h  hash.cpp  hash.h  hash_table.h  iterator.h  jsoncpp.cpp  libzks.h  mmap.h  random.h  service.cpp  service.h  simconf.cpp  simconf.h  simlog.cpp  simlog.h  simlog.ini  stopwatch.h  test.cpp  u8string.cpp  u8string.h  utility.cpp  utility.h  zks.natvis
unittest/: CMakeLists.txt  buildit.ini  goods.json  nsw_lotto.ini  test.cpp  test.h  test.ini  test_array.cpp  test_array.h  test_bit.cpp  test_bit.h  test_conf.cpp  test_conf.h  test_distributor.cpp  test_distributor.h  test_hash.cpp  test_hash.h  test_locale.cpp  test_locale.h  test_random.cpp  test_random.h  test_service.cpp  test_service.h  test_simlog.h  test_stopwatch.h  test_utility.cpp  test_utility.h
xunit/: CMakeLists.txt  UnitTest.cpp  UnitTest.h
